frontend/test/should_fail/mismatch_of_match_class_type_with_match_type.grg
match class Foo
{
	def var i:int;
}

test foo implements Foo
{
	def var i:int;
}

filter filterRemoveNonMatching<foo>(var i:int)
{
	for(m:match<class Foo> in this)
	{
		if(m.i != i) {
			m = null; 
		}
	}
}
